--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>To-Do List</h1>
     <form id="todo-form">
         <input type="text" id="task-input" placeholder="Enter a task" required>
+        <input type="date" id="date-input">
         <button type="submit">Add Task</button>
+        
     </form>
     <ul id="task-list"></ul>
     <script src="script.js"></script>
