--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <input type="date" id="date-input">
         <button type="submit">Add Task</button>
         
+        
     </form>
+    <button id="completed">Completed</button>
+    <button id="incompleted">Incompleted</button>
     <ul id="task-list"></ul>
     <script src="script.js"></script>
     <script src="tests.js"></script>
