--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
     </form>
     <button id="completed">Completed</button>
-    <button id="incompleted">Incompleted</button>
+    <button id="incompleted">Incomplete</button>
     <ul id="task-list"></ul>
     <script src="script.js"></script>
     <script src="tests.js"></script>
