--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </form>
     <button id="completed">Completed</button>
     <button id="incompleted">Incomplete</button>
+    <button id="show-all">Show All</button>
+
     <ul id="task-list"></ul>
     <script src="script.js"></script>
     <script src="tests.js"></script>
