--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h1>To-Do List</h1>
-    <form id="todo-form">
+    <!-- <form id="todo-form">
         <input type="text" id="task-input" placeholder="Enter a task" required>
         <input type="date" id="date-input">
         <button type="submit">Add Task</button>
         
         
-    </form>
+    </form> -->
     <button id="completed">Completed</button>
     <button id="incompleted">Incomplete</button>
     <button id="show-all">Show All</button>
