add buttons to categories

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         
         
     </form> -->
-    <button id="completed">Completed</button>
+    <!-- <button id="completed">Completed</button>
     <button id="incompleted">Incomplete</button>
-    <button id="show-all">Show All</button>
+    <button id="show-all">Show All</button> -->
 
     <div id="categories-container">
         <form id="category-form">
