add category, select category, show all tasks button

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
     <button id="order-date">Order by Date</button>
     <button id="order-priority">Order by Priority</button>
 
+    <br><br>
+
+    <button id="show-all-tasks">Show All Tasks</button>
+
+
     <ul id="task-list"></ul>
 
     <script src="script.js"></script>
