remove repeated code

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <br><br>
 
-    <button id="show-all-tasks">Show All Tasks</button>
+    <!-- <button id="show-all-tasks">Show All Tasks</button> -->
 
 
     <ul id="task-list"></ul>
