--- a/index.html
+++ b/index.html
@@ -4,20 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task Manager</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    #controls {
-      margin-bottom: 20px;
-    }
-    #task-controls {
-      margin-top: 20px;
-    }
-    select, input {
-      margin-right: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+  
 </head>
 <body>
 
