--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Task Manager</title>
-  <link rel="stylesheet" href="styles.css">
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task Manager</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="container">
+        <button id="add-task-btn">ADD TASK</button>
+        <button id="add-category-btn">ADD CATEGORY</button>
 
-  <!-- Controls Section -->
-  <div id="controls">
-    <button id="add-task-btn">ADD TASK</button>
-    <button id="add-category-btn">ADD CATEGORY</button>
+        <select id="show-dropdown">
+            <option value="" disabled selected>SHOW</option>
+            <option value="ALL">All</option>
+            <option value="INCOMPLETE">Incomplete</option>
+        </select>
 
-    <select id="show-dropdown">
-        <option value="" disabled selected>SHOW</option>
-      <option value="all">ALL</option>
-      <option value="incomplete">INCOMPLETE</option>
-      <!-- Categories will be added dynamically later -->
+        <select id="order-dropdown">
+            <option value="" disabled selected>ORDER BY</option>
+            <option value="DATE">Date</option>
+            <option value="PRIORITY">Priority</option>
+        </select>
+
+        <!-- Task Form -->
+        <!-- Task Form -->
+<div id="task-form" style="display: none;">
+    <input id="task-input" placeholder="Enter Task">
+    <input id="date-input" type="date">
+    <select id="category-input">
+        <!-- Categories will be populated dynamically -->
     </select>
-
-    <select id="order-dropdown">
-        <option value="" disabled selected>ORDER BY</option>
-      <option value="date">DATE</option>
-      <option value="priority">PRIORITY</option>
+    <select id="priority-input">
+        <option value="Critical">Critical</option>
+        <option value="Normal">Normal</option>
+        <option value="Low">Low</option>
     </select>
-  </div>
+    <button id="task-ok-btn">OK</button>
+</div>
 
-  <!-- Task/Categories Controls Section (Dynamic) -->
-  <div id="task-controls">
-    <!-- Input fields for adding tasks or categories will go here -->
-  </div>
 
-  <!-- Task List -->
-  <ul id="task-list">
-    <!-- List of tasks will be shown here -->
-  </ul>
+        <!-- Category Form -->
+        <div id="category-form" style="display: none;">
+            <input id="new-category-input" placeholder="Enter New Category">
+            <button id="category-ok-btn">OK</button>
+        </div>
 
+        <ul id="task-list">
+            <!-- Tasks will be listed here -->
+        </ul>
+    </div>
+
+    <!-- Add your JavaScript here, before closing body tag -->
+    <script src="script.js"></script>
 </body>
 </html>
