--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@
         </div>
 
         <ul id="task-list">
-            <!-- Tasks will be listed here -->
-        </ul>
+            <li class="task-header">
+              <span>Item Name</span>
+              <span>Due Date</span>
+              <span>Priority</span>
+              <span>Category</span>
+            </li>
+            <!-- Tasks will be rendered here -->
+          </ul>
+          
     </div>
 
     <!-- Add your JavaScript here, before closing body tag -->
