--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+
+<div class="unicorn">
+
+</div>
+
     <div id="container">
       <button id="add-task-btn">ADD TASK</button>
       <button id="add-category-btn">ADD CATEGORY</button>
