--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       </div>
 
       <ul id="task-list">
-        <li class="task-header">
+        <!-- <li class="task-header">
           <span>Item Name</span>
           <span>Due Date</span>
           <span>Priority</span>
           <span>Category</span>
-        </li>
+        </li> -->
         <!-- Tasks will be rendered here -->
       </ul>
     </div>
