fly from bottom

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
 
-<div class="unicorn">
+    <div class="unicorn" style="position: absolute; display: none;"></div>
 
-</div>
 
     <div id="container">
       <button id="add-task-btn">ADD TASK</button>
