--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-
-    <div class="unicorn" style="position: absolute; display: none;"></div>
-
+    <div class="unicorn" style="position: absolute; display: none"></div>
 
     <div id="container">
       <button id="add-task-btn">ADD TASK</button>
